# gltron-code

./: .gitignore  CWProject.sit  Makefile.am  aclocal.m4  config.h.in  configure  configure.ac  gltron.sln
art/: Makefile.am
data/: Makefile.am
glew/: glew.vcxproj  glew.vcxproj.filters
lib3ds/: Makefile.am  atmosphere.c  atmosphere.h  background.c  background.h  camera.c  camera.h  chunk.c  chunk.h  chunktable.h  ease.c  ease.h  file.c  file.h  float.c  float.h  io.c  io.h  lib3ds.vcxproj  lib3ds.vcxproj.filters  light.c  light.h  material.c  material.h  matrix.c  matrix.h  mesh.c  mesh.h  node.c  node.h  quat.c  quat.h  shadow.c  shadow.h  tcb.c  tcb.h  tracks.c  tracks.h  types.h  vector.c  (+3 more)
lua5/: lapi.c  lapi.h  lcode.c  lcode.h  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  llex.c  llex.h  llimits.h  lmem.c  lmem.h  lobject.c  lobject.h  lopcodes.c  lopcodes.h  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  lstring.h  ltable.c  ltable.h  ltests.c  ltm.c  ltm.h  lua5.vcxproj  lundump.c  lundump.h  lvm.c  lvm.h  lzio.c  lzio.h
lua5/include/: lauxlib.h  lua.h  lualib.h
lua5/lib/: lauxlib.c  lbaselib.c  ldblib.c  liolib.c  lmathlib.c  loadlib.c  lstrlib.c  ltablib.c
nebu/: nebu.vcxproj  nebu.vcxproj.filters
nebu/audio/: Makefile.am  SoundSystem.cpp
nebu/base/: png_texture.c  system.c
nebu/filesystem/: directory-win32.c
nebu/include/video/: nebu_renderer_gl.h
nebu/input/: Makefile.am  input_system.c
nebu/scripting/: Makefile.am  scripting.c
nebu/video/: Makefile.am  video_system.c
nebutest/: nebutest.c  nebutest.vcxproj
scripts/: audio.lua  basics.lua  gauge.lua  hud.lua  menu.lua  menu_functions.lua  save.lua  video.lua
sdl_sound/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  extra_rwops.c
sdl_sound/VisualC/: playsound.vcxproj  playsound.vcxproj.filters  playsound_static.vcxproj  sdl_sound.sln  sdl_sound_dll.vcxproj  sdl_sound_static.vcxproj  sdl_sound_static.vcxproj.filters
sdl_sound/VisualC/playsound/: playsound.vcxproj  playsound.vcxproj.filters
sdl_sound/VisualC/playsound_static/: playsound_static.vcxproj  playsound_static.vcxproj.filters
sdl_sound/VisualC/sdl_sound/: sdl_sound.vcxproj  sdl_sound.vcxproj.filters
sdl_sound/VisualC/sdl_sound_static/: sdl_sound_static.vcxproj  sdl_sound_static.vcxproj.filters
sdl_sound/decoders/: Makefile.in  flac.c  mpglib.c
sdl_sound/decoders/mpglib/: Makefile.in  mpg123_sdlsound.h
sdl_sound/decoders/timidity/: Makefile.in  instrum_dls.c  options.h  timidity.c
sdl_sound/playsound/: Makefile.in  playsound.c
src/: gltron.vcxproj  gltron.vcxproj.filters
src/audio/: Makefile.am
src/base/: Makefile.am
src/configuration/: Makefile.am  settings.c
src/game/: Makefile.am  gui.c
src/include/game/: gltron.h
src/input/: Makefile.am
src/video/: Makefile.am
tools/artpack-conversion/: artpack-conversion.vcxproj  artpack-conversion.vcxproj.filters
win32/: readme.txt  readme2.txt
